<resources>
    <string name="app_name">FindMyCrew</string>
    <string name="frontScreen">Find Your Next Adventure</string>
    <string name="id">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Account?</string>
    <string name="create">Create Account</string>
    <string name="login">Login</string>
    <string name="friendFeed">Friends Activity</string>
    <string name="yourFeed">Your Activity</string>
    <string name="buy">Buy Tickets</string>
    <string name="sell">Sell Tickets</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="findPeople">Find Your Crew</string>
    <string name="searchBar">Search</string>
    <string name="selling">What are you selling?</string>
    <string name="createTitle">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="rePassword">Re-Enter Password</string>
    <string name="phoneNum">Phone</string>
    <string name="createBtn">Create</string>
    <string name="haveAccount">Have an Account?</string>


    //Tickets
    <string-array name="typeOfTicket">
        <item>Sinlge Day GA</item>
        <item>Single Day VIP</item>
        <item>3-Day GA</item>
        <item>3-Day VIP</item>
    </string-array>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="typeOfTicketTxt">Type of Ticket</string>
    <string name="quantityTxt">Quantity</string>
    <string name="sellBtn">Sell</string>
</resources>
