<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.findmycrew.MainActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="545dp"
        android:layout_height="539dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/concertthree" />

    <ImageView
        android:id="@+id/blackBox"
        android:layout_width="326dp"
        android:layout_height="342dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/rectangle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/galada"
        android:text="@string/frontScreen"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/id"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/blackBox"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/blackBox"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="164dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/blackBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="155dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/blackBox"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/blackBox"
        app:layout_constraintEnd_toEndOf="@+id/blackBox"
        app:layout_constraintStart_toStartOf="@+id/blackBox"
        app:layout_constraintTop_toBottomOf="@+id/yourActivity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/create"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/blackBox"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/yourActivity"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/forgot"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/blackBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />


</android.support.constraint.ConstraintLayout>
